# turplan

./: README.md  pyproject.toml  trips.json
tests/: test_turplan.py
turplan/: cli.py  cli2.py  models.py  params.py  planning.py  utils.py
turplan/commands/: add.py  config.py
turplan/commands/add/: aktivitet.py  deltager.py  location.py  participant.py
turplan/commands/config/: init.py
turplan/commons/: params.py  system.py
turplan/models/: models.py
