[project]
name = "turplan"
version = "0.1"
description = "CLI program til at holde styr på en kommende tur"
readme = "README.md"
authors = [{name = "Rasmus Ravn Andersen"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "pydantic[email]>=2.10.4",
    "typer>=0.15.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/rasmusravn/turplan"
Changelog = "https://github.com/rasmusravn/turplan/releases"
Issues = "https://github.com/rasmusravn/turplan/issues"
CI = "https://github.com/rasmusravn/turplan/actions"

[project.scripts]
turplan = "turplan.cli:app"

[project.optional-dependencies]
test = ["pytest"]
